if_switch/code/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT

Grammar

Rule 0     S' -> start
Rule 1     start -> multiple_statements
Rule 2     multiple_statements -> multiple_statements statement
Rule 3     multiple_statements -> statement
Rule 4     statement -> open
Rule 5     statement -> closed
Rule 6     open -> IF condition statement
Rule 7     open -> IF condition closed ELSE open
Rule 8     open -> WHILE condition open
Rule 9     open -> for for_condition open
Rule 10    for -> FOR
Rule 11    closed -> simple
Rule 12    closed -> block
Rule 13    closed -> IF condition closed ELSE closed
Rule 14    closed -> WHILE condition closed
Rule 15    closed -> for for_condition closed
Rule 16    condition -> L_PAREN expr R_PAREN
Rule 17    for_condition -> L_PAREN simple simple expr R_PAREN
Rule 18    for_condition -> L_PAREN simple simple R_PAREN
Rule 19    multi_declaration -> multi_declaration ID COMMA
Rule 20    multi_declaration -> multi_declaration MULTIPLY ID COMMA
Rule 21    multi_declaration -> multi_declaration ID ASSIGN expr COMMA
Rule 22    multi_declaration -> multi_declaration MULTIPLY ID ASSIGN expr COMMA
Rule 23    multi_declaration -> ID COMMA
Rule 24    multi_declaration -> ID ASSIGN expr COMMA
Rule 25    multi_declaration -> MULTIPLY ID COMMA
Rule 26    multi_declaration -> MULTIPLY ID ASSIGN expr COMMA
Rule 27    stop -> ID SEMICOLON
Rule 28    stop -> MULTIPLY ID SEMICOLON
Rule 29    stop -> ID ASSIGN expr SEMICOLON
Rule 30    stop -> MULTIPLY ID ASSIGN expr SEMICOLON
Rule 31    arrayindex -> L_SQBRACE index R_SQBRACE
Rule 32    narrayindex -> narrayindex arrayindex
Rule 33    narrayindex -> arrayindex
Rule 34    declaration -> TYPE ID SEMICOLON
Rule 35    declaration -> TYPE MULTIPLY ID SEMICOLON
Rule 36    declaration -> TYPE ID ASSIGN expr SEMICOLON
Rule 37    declaration -> TYPE MULTIPLY ID ASSIGN expr SEMICOLON
Rule 38    declaration -> TYPE multi_declaration stop
Rule 39    declaration -> TYPE ID narrayindex SEMICOLON
Rule 40    declaration -> TYPE ID narrayindex ASSIGN init_list SEMICOLON
Rule 41    init -> expr COMMA init
Rule 42    init -> expr
Rule 43    init_list -> L_FLOWBRACE init_list R_FLOWBRACE COMMA init_list
Rule 44    init_list -> L_FLOWBRACE init R_FLOWBRACE COMMA init_list
Rule 45    init_list -> L_FLOWBRACE init R_FLOWBRACE
Rule 46    init_list -> L_FLOWBRACE init_list R_FLOWBRACE
Rule 47    index -> expr
Rule 48    index -> empty
Rule 49    block -> left_flower multiple_statements right_flower
Rule 50    block -> left_flower right_flower
Rule 51    left_flower -> L_FLOWBRACE
Rule 52    right_flower -> R_FLOWBRACE
Rule 53    simple -> expr SEMICOLON
Rule 54    simple -> header
Rule 55    simple -> declaration
Rule 56    simple -> SEMICOLON
Rule 57    simple -> function
Rule 58    simple -> RETURN expr SEMICOLON
Rule 59    simple -> RETURN SEMICOLON
Rule 60    header -> HASH INCLUDE STRING
Rule 61    header -> HASH INCLUDE HEADER_FILE
Rule 62    empty -> <empty>
Rule 63    function_call -> ID L_PAREN call_params R_PAREN
Rule 64    call_params -> empty
Rule 65    call_params -> yes_call_params end_call_params
Rule 66    call_params -> end_call_params
Rule 67    yes_call_params -> yes_call_params expr COMMA
Rule 68    yes_call_params -> expr COMMA
Rule 69    end_call_params -> expr
Rule 70    yes_dec_params -> yes_dec_params TYPE ID COMMA
Rule 71    yes_dec_params -> yes_dec_params TYPE MULTIPLY ID COMMA
Rule 72    yes_dec_params -> yes_dec_params TYPE COMMA
Rule 73    yes_dec_params -> yes_dec_params TYPE MULTIPLY COMMA
Rule 74    yes_dec_params -> yes_dec_params TYPE ID ASSIGN NUM COMMA
Rule 75    yes_dec_params -> TYPE ID COMMA
Rule 76    yes_dec_params -> TYPE MULTIPLY ID COMMA
Rule 77    yes_dec_params -> TYPE COMMA
Rule 78    yes_dec_params -> TYPE MULTIPLY COMMA
Rule 79    yes_dec_params -> TYPE ID ASSIGN NUM COMMA
Rule 80    end_dec_params -> TYPE ID
Rule 81    end_dec_params -> TYPE ID ASSIGN NUM
Rule 82    end_dec_params -> TYPE
Rule 83    end_dec_params -> TYPE MULTIPLY ID
Rule 84    end_dec_params -> TYPE MULTIPLY
Rule 85    dec_params -> empty
Rule 86    dec_params -> yes_dec_params end_dec_params
Rule 87    dec_params -> end_dec_params
Rule 88    function -> TYPE ID L_PAREN dec_params R_PAREN function_2
Rule 89    function_2 -> SEMICOLON
Rule 90    function_2 -> block
Rule 91    expr -> expr assignment exprOR
Rule 92    expr -> exprOR
Rule 93    assignment -> ASSIGN
Rule 94    assignment -> PLUS_ASSIGN
Rule 95    assignment -> MINUS_ASSIGN
Rule 96    assignment -> MUL_ASSIGN
Rule 97    assignment -> DIV_ASSIGN
Rule 98    assignment -> AND_ASSIGN
Rule 99    assignment -> OR_ASSIGN
Rule 100   assignment -> XOR_ASSIGN
Rule 101   assignment -> MOD_ASSIGN
Rule 102   assignment -> L_SHIFT_ASSIGN
Rule 103   assignment -> R_SHIFT_ASSIGN
Rule 104   exprOR -> exprOR OR exprAND
Rule 105   exprOR -> exprAND
Rule 106   exprAND -> exprAND AND exprBITOR
Rule 107   exprAND -> exprBITOR
Rule 108   exprBITOR -> exprBITOR BIT_OR exprBITXOR
Rule 109   exprBITOR -> exprBITXOR
Rule 110   exprBITXOR -> exprBITXOR BIT_XOR exprBITAND
Rule 111   exprBITXOR -> exprBITAND
Rule 112   exprBITAND -> exprBITAND BIT_AND exprEQ
Rule 113   exprBITAND -> exprEQ
Rule 114   exprEQ -> exprEQ EQ exprRELOP
Rule 115   exprEQ -> exprEQ NE exprRELOP
Rule 116   exprEQ -> exprRELOP
Rule 117   exprRELOP -> exprRELOP relop exprSHIFT
Rule 118   exprRELOP -> exprSHIFT
Rule 119   relop -> LE
Rule 120   relop -> LT
Rule 121   relop -> GE
Rule 122   relop -> GT
Rule 123   exprSHIFT -> exprSHIFT L_SHIFT exprOP
Rule 124   exprSHIFT -> exprSHIFT R_SHIFT exprOP
Rule 125   exprSHIFT -> exprOP
Rule 126   exprOP -> exprOP PLUS term
Rule 127   exprOP -> exprOP MINUS term
Rule 128   exprOP -> term
Rule 129   term -> term MULTIPLY factor
Rule 130   term -> term DIVIDE factor
Rule 131   term -> term MOD factor
Rule 132   term -> factor
Rule 133   factor -> NOT factor
Rule 134   factor -> PLUS factor
Rule 135   factor -> MINUS factor
Rule 136   factor -> PLUS_PLUS factor
Rule 137   factor -> MINUS_MINUS factor
Rule 138   factor -> cast brace
Rule 139   factor -> brace
Rule 140   cast -> L_PAREN TYPE R_PAREN
Rule 141   cast -> L_PAREN TYPE MULTIPLY R_PAREN
Rule 142   brace -> L_PAREN expr R_PAREN
Rule 143   brace -> brace PLUS_PLUS
Rule 144   brace -> brace MINUS_MINUS
Rule 145   brace -> NUM
Rule 146   brace -> STRING
Rule 147   brace -> MULTIPLY ID
Rule 148   brace -> BIT_AND ID
Rule 149   brace -> ID
Rule 150   brace -> CHAR
Rule 151   brace -> function_call
Rule 152   brace -> ID narrayindex
Rule 153   NUM -> INT_NUM
Rule 154   NUM -> FLOAT_NUM

Terminals, with rules where they appear

AND                  : 106
AND_ASSIGN           : 98
ASSIGN               : 21 22 24 26 29 30 36 37 40 74 79 81 93
BIT_AND              : 112 148
BIT_OR               : 108
BIT_XOR              : 110
CHAR                 : 150
COMMA                : 19 20 21 22 23 24 25 26 41 43 44 67 68 70 71 72 73 74 75 76 77 78 79
DIVIDE               : 130
DIV_ASSIGN           : 97
DOT                  : 
ELSE                 : 7 13
EQ                   : 114
FLOAT_NUM            : 154
FOR                  : 10
GE                   : 121
GT                   : 122
HASH                 : 60 61
HEADER_FILE          : 61
ID                   : 19 20 21 22 23 24 25 26 27 28 29 30 34 35 36 37 39 40 63 70 71 74 75 76 79 80 81 83 88 147 148 149 152
IF                   : 6 7 13
INCLUDE              : 60 61
INT_NUM              : 153
LE                   : 119
LT                   : 120
L_FLOWBRACE          : 43 44 45 46 51
L_PAREN              : 16 17 18 63 88 140 141 142
L_SHIFT              : 123
L_SHIFT_ASSIGN       : 102
L_SQBRACE            : 31
MINUS                : 127 135
MINUS_ASSIGN         : 95
MINUS_MINUS          : 137 144
MOD                  : 131
MOD_ASSIGN           : 101
MULTIPLY             : 20 22 25 26 28 30 35 37 71 73 76 78 83 84 129 141 147
MUL_ASSIGN           : 96
NE                   : 115
NOT                  : 133
OR                   : 104
OR_ASSIGN            : 99
PLUS                 : 126 134
PLUS_ASSIGN          : 94
PLUS_PLUS            : 136 143
RETURN               : 58 59
R_FLOWBRACE          : 43 44 45 46 52
R_PAREN              : 16 17 18 63 88 140 141 142
R_SHIFT              : 124
R_SHIFT_ASSIGN       : 103
R_SQBRACE            : 31
SEMICOLON            : 27 28 29 30 34 35 36 37 39 40 53 56 58 59 89
STRING               : 60 146
TYPE                 : 34 35 36 37 38 39 40 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 88 140 141
WHILE                : 8 14
XOR_ASSIGN           : 100
error                : 

Nonterminals, with rules where they appear

NUM                  : 74 79 81 145
arrayindex           : 32 33
assignment           : 91
block                : 12 90
brace                : 138 139 143 144
call_params          : 63
cast                 : 138
closed               : 5 7 13 13 14 15
condition            : 6 7 8 13 14
dec_params           : 88
declaration          : 55
empty                : 48 64 85
end_call_params      : 65 66
end_dec_params       : 86 87
expr                 : 16 17 21 22 24 26 29 30 36 37 41 42 47 53 58 67 68 69 91 142
exprAND              : 104 105 106
exprBITAND           : 110 111 112
exprBITOR            : 106 107 108
exprBITXOR           : 108 109 110
exprEQ               : 112 113 114 115
exprOP               : 123 124 125 126 127
exprOR               : 91 92 104
exprRELOP            : 114 115 116 117
exprSHIFT            : 117 118 123 124
factor               : 129 130 131 132 133 134 135 136 137
for                  : 9 15
for_condition        : 9 15
function             : 57
function_2           : 88
function_call        : 151
header               : 54
index                : 31
init                 : 41 44 45
init_list            : 40 43 43 44 46
left_flower          : 49 50
multi_declaration    : 19 20 21 22 38
multiple_statements  : 1 2 49
narrayindex          : 32 39 40 152
open                 : 4 7 8 9
relop                : 117
right_flower         : 49 50
simple               : 11 17 17 18 18
start                : 0
statement            : 2 3 6
stop                 : 38
term                 : 126 127 128 129 130 131
yes_call_params      : 65 67
yes_dec_params       : 70 71 72 73 74 86

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . multiple_statements
    (2) multiple_statements -> . multiple_statements statement
    (3) multiple_statements -> . statement
    (4) statement -> . open
    (5) statement -> . closed
    (6) open -> . IF condition statement
    (7) open -> . IF condition closed ELSE open
    (8) open -> . WHILE condition open
    (9) open -> . for for_condition open
    (11) closed -> . simple
    (12) closed -> . block
    (13) closed -> . IF condition closed ELSE closed
    (14) closed -> . WHILE condition closed
    (15) closed -> . for for_condition closed
    (10) for -> . FOR
    (53) simple -> . expr SEMICOLON
    (54) simple -> . header
    (55) simple -> . declaration
    (56) simple -> . SEMICOLON
    (57) simple -> . function
    (58) simple -> . RETURN expr SEMICOLON
    (59) simple -> . RETURN SEMICOLON
    (49) block -> . left_flower multiple_statements right_flower
    (50) block -> . left_flower right_flower
    (91) expr -> . expr assignment exprOR
    (92) expr -> . exprOR
    (60) header -> . HASH INCLUDE STRING
    (61) header -> . HASH INCLUDE HEADER_FILE
    (34) declaration -> . TYPE ID SEMICOLON
    (35) declaration -> . TYPE MULTIPLY ID SEMICOLON
    (36) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (37) declaration -> . TYPE MULTIPLY ID ASSIGN expr SEMICOLON
    (38) declaration -> . TYPE multi_declaration stop
    (39) declaration -> . TYPE ID narrayindex SEMICOLON
    (40) declaration -> . TYPE ID narrayindex ASSIGN init_list SEMICOLON
    (88) function -> . TYPE ID L_PAREN dec_params R_PAREN function_2
    (51) left_flower -> . L_FLOWBRACE
    (104) exprOR -> . exprOR OR exprAND
    (105) exprOR -> . exprAND
    (106) exprAND -> . exprAND AND exprBITOR
    (107) exprAND -> . exprBITOR
    (108) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (109) exprBITOR -> . exprBITXOR
    (110) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (111) exprBITXOR -> . exprBITAND
    (112) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (113) exprBITAND -> . exprEQ
    (114) exprEQ -> . exprEQ EQ exprRELOP
    (115) exprEQ -> . exprEQ NE exprRELOP
    (116) exprEQ -> . exprRELOP
    (117) exprRELOP -> . exprRELOP relop exprSHIFT
    (118) exprRELOP -> . exprSHIFT
    (123) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (124) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (125) exprSHIFT -> . exprOP
    (126) exprOP -> . exprOP PLUS term
    (127) exprOP -> . exprOP MINUS term
    (128) exprOP -> . term
    (129) term -> . term MULTIPLY factor
    (130) term -> . term DIVIDE factor
    (131) term -> . term MOD factor
    (132) term -> . factor
    (133) factor -> . NOT factor
    (134) factor -> . PLUS factor
    (135) factor -> . MINUS factor
    (136) factor -> . PLUS_PLUS factor
    (137) factor -> . MINUS_MINUS factor
    (138) factor -> . cast brace
    (139) factor -> . brace
    (140) cast -> . L_PAREN TYPE R_PAREN
    (141) cast -> . L_PAREN TYPE MULTIPLY R_PAREN
    (142) brace -> . L_PAREN expr R_PAREN
    (143) brace -> . brace PLUS_PLUS
    (144) brace -> . brace MINUS_MINUS
    (145) brace -> . NUM
    (146) brace -> . STRING
    (147) brace -> . MULTIPLY ID
    (148) brace -> . BIT_AND ID
    (149) brace -> . ID
    (150) brace -> . CHAR
    (151) brace -> . function_call
    (152) brace -> . ID narrayindex
    (153) NUM -> . INT_NUM
    (154) NUM -> . FLOAT_NUM
    (63) function_call -> . ID L_PAREN call_params R_PAREN

    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 11
    SEMICOLON       shift and go to state 13
    RETURN          shift and go to state 17
    HASH            shift and go to state 20
    TYPE            shift and go to state 22
    L_FLOWBRACE     shift and go to state 26
    NOT             shift and go to state 40
    PLUS            shift and go to state 36
    MINUS           shift and go to state 38
    PLUS_PLUS       shift and go to state 41
    MINUS_MINUS     shift and go to state 42
    L_PAREN         shift and go to state 25
    STRING          shift and go to state 21
    MULTIPLY        shift and go to state 24
    BIT_AND         shift and go to state 31
    ID              shift and go to state 23
    CHAR            shift and go to state 46
    INT_NUM         shift and go to state 48
    FLOAT_NUM       shift and go to state 49

    start                          shift and go to state 1
    multiple_statements            shift and go to state 2
    statement                      shift and go to state 3
    open                           shift and go to state 4
    closed                         shift and go to state 5
    for                            shift and go to state 8
    simple                         shift and go to state 9
    block                          shift and go to state 10
    expr                           shift and go to state 12
    header                         shift and go to state 14
    declaration                    shift and go to state 15
    function                       shift and go to state 16
    left_flower                    shift and go to state 18
    exprOR                         shift and go to state 19
    exprAND                        shift and go to state 27
    exprBITOR                      shift and go to state 28
    exprBITXOR                     shift and go to state 29
    exprBITAND                     shift and go to state 30
    exprEQ                         shift and go to state 32
    exprRELOP                      shift and go to state 33
    exprSHIFT                      shift and go to state 34
    exprOP                         shift and go to state 35
    term                           shift and go to state 37
    factor                         shift and go to state 39
    cast                           shift and go to state 43
    brace                          shift and go to state 44
    NUM                            shift and go to state 45
    function_call                  shift and go to state 47

state 1

    (0) S' -> start .



state 2

    (1) start -> multiple_statements .
    (2) multiple_statements -> multiple_statements . statement
    (4) statement -> . open
    (5) statement -> . closed
    (6) open -> . IF condition statement
    (7) open -> . IF condition closed ELSE open
    (8) open -> . WHILE condition open
    (9) open -> . for for_condition open
    (11) closed -> . simple
    (12) closed -> . block
    (13) closed -> . IF condition closed ELSE closed
    (14) closed -> . WHILE condition closed
    (15) closed -> . for for_condition closed
    (10) for -> . FOR
    (53) simple -> . expr SEMICOLON
    (54) simple -> . header
    (55) simple -> . declaration
    (56) simple -> . SEMICOLON
    (57) simple -> . function
    (58) simple -> . RETURN expr SEMICOLON
    (59) simple -> . RETURN SEMICOLON
    (49) block -> . left_flower multiple_statements right_flower
    (50) block -> . left_flower right_flower
    (91) expr -> . expr assignment exprOR
    (92) expr -> . exprOR
    (60) header -> . HASH INCLUDE STRING
    (61) header -> . HASH INCLUDE HEADER_FILE
    (34) declaration -> . TYPE ID SEMICOLON
    (35) declaration -> . TYPE MULTIPLY ID SEMICOLON
    (36) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (37) declaration -> . TYPE MULTIPLY ID ASSIGN expr SEMICOLON
    (38) declaration -> . TYPE multi_declaration stop
    (39) declaration -> . TYPE ID narrayindex SEMICOLON
    (40) declaration -> . TYPE ID narrayindex ASSIGN init_list SEMICOLON
    (88) function -> . TYPE ID L_PAREN dec_params R_PAREN function_2
    (51) left_flower -> . L_FLOWBRACE
    (104) exprOR -> . exprOR OR exprAND
    (105) exprOR -> . exprAND
    (106) exprAND -> . exprAND AND exprBITOR
    (107) exprAND -> . exprBITOR
    (108) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (109) exprBITOR -> . exprBITXOR
    (110) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (111) exprBITXOR -> . exprBITAND
    (112) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (113) exprBITAND -> . exprEQ
    (114) exprEQ -> . exprEQ EQ exprRELOP
    (115) exprEQ -> . exprEQ NE exprRELOP
    (116) exprEQ -> . exprRELOP
    (117) exprRELOP -> . exprRELOP relop exprSHIFT
    (118) exprRELOP -> . exprSHIFT
    (123) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (124) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (125) exprSHIFT -> . exprOP
    (126) exprOP -> . exprOP PLUS term
    (127) exprOP -> . exprOP MINUS term
    (128) exprOP -> . term
    (129) term -> . term MULTIPLY factor
    (130) term -> . term DIVIDE factor
    (131) term -> . term MOD factor
    (132) term -> . factor
    (133) factor -> . NOT factor
    (134) factor -> . PLUS factor
    (135) factor -> . MINUS factor
    (136) factor -> . PLUS_PLUS factor
    (137) factor -> . MINUS_MINUS factor
    (138) factor -> . cast brace
    (139) factor -> . brace
    (140) cast -> . L_PAREN TYPE R_PAREN
    (141) cast -> . L_PAREN TYPE MULTIPLY R_PAREN
    (142) brace -> . L_PAREN expr R_PAREN
    (143) brace -> . brace PLUS_PLUS
    (144) brace -> . brace MINUS_MINUS
    (145) brace -> . NUM
    (146) brace -> . STRING
    (147) brace -> . MULTIPLY ID
    (148) brace -> . BIT_AND ID
    (149) brace -> . ID
    (150) brace -> . CHAR
    (151) brace -> . function_call
    (152) brace -> . ID narrayindex
    (153) NUM -> . INT_NUM
    (154) NUM -> . FLOAT_NUM
    (63) function_call -> . ID L_PAREN call_params R_PAREN

    $end            reduce using rule 1 (start -> multiple_statements .)
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 11
    SEMICOLON       shift and go to state 13
    RETURN          shift and go to state 17
    HASH            shift and go to state 20
    TYPE            shift and go to state 22
    L_FLOWBRACE     shift and go to state 26
    NOT             shift and go to state 40
    PLUS            shift and go to state 36
    MINUS           shift and go to state 38
    PLUS_PLUS       shift and go to state 41
    MINUS_MINUS     shift and go to state 42
    L_PAREN         shift and go to state 25
    STRING          shift and go to state 21
    MULTIPLY        shift and go to state 24
    BIT_AND         shift and go to state 31
    ID              shift and go to state 23
    CHAR            shift and go to state 46
    INT_NUM         shift and go to state 48
    FLOAT_NUM       shift and go to state 49

    statement                      shift and go to state 50
    open                           shift and go to state 4
    closed                         shift and go to state 5
    for                            shift and go to state 8
    simple                         shift and go to state 9
    block                          shift and go to state 10
    expr                           shift and go to state 12
    header                         shift and go to state 14
    declaration                    shift and go to state 15
    function                       shift and go to state 16
    left_flower                    shift and go to state 18
    exprOR                         shift and go to state 19
    exprAND                        shift and go to state 27
    exprBITOR                      shift and go to state 28
    exprBITXOR                     shift and go to state 29
    exprBITAND                     shift and go to state 30
    exprEQ                         shift and go to state 32
    exprRELOP                      shift and go to state 33
    exprSHIFT                      shift and go to state 34
    exprOP                         shift and go to state 35
    term                           shift and go to state 37
    factor                         shift and go to state 39
    cast                           shift and go to state 43
    brace                          shift and go to state 44
    NUM                            shift and go to state 45
    function_call                  shift and go to state 47

state 3

    (3) multiple_statements -> statement .

    IF              reduce using rule 3 (multiple_statements -> statement .)
    WHILE           reduce using rule 3 (multiple_statements -> statement .)
    FOR             reduce using rule 3 (multiple_statements -> statement .)
    SEMICOLON       reduce using rule 3 (multiple_statements -> statement .)
    RETURN          reduce using rule 3 (multiple_statements -> statement .)
    HASH            reduce using rule 3 (multiple_statements -> statement .)
    TYPE            reduce using rule 3 (multiple_statements -> statement .)
    L_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)
    NOT             reduce using rule 3 (multiple_statements -> statement .)
    PLUS            reduce using rule 3 (multiple_statements -> statement .)
    MINUS           reduce using rule 3 (multiple_statements -> statement .)
    PLUS_PLUS       reduce using rule 3 (multiple_statements -> statement .)
    MINUS_MINUS     reduce using rule 3 (multiple_statements -> statement .)
    L_PAREN         reduce using rule 3 (multiple_statements -> statement .)
    STRING          reduce using rule 3 (multiple_statements -> statement .)
    MULTIPLY        reduce using rule 3 (multiple_statements -> statement .)
    BIT_AND         reduce using rule 3 (multiple_statements -> statement .)
    ID              reduce using rule 3 (multiple_statements -> statement .)
    CHAR            reduce using rule 3 (multiple_statements -> statement .)
    INT_NUM         reduce using rule 3 (multiple_statements -> statement .)
    FLOAT_NUM       reduce using rule 3 (multiple_statements -> statement .)
    $end            reduce using rule 3 (multiple_statements -> statement .)
    R_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)


state 4

    (4) statement -> open .

    IF              reduce using rule 4 (statement -> open .)
    WHILE           reduce using rule 4 (statement -> open .)
    FOR             reduce using rule 4 (statement -> open .)
    SEMICOLON       reduce using rule 4 (statement -> open .)
    RETURN          reduce using rule 4 (statement -> open .)
    HASH            reduce using rule 4 (statement -> open .)
    TYPE            reduce using rule 4 (statement -> open .)
    L_FLOWBRACE     reduce using rule 4 (statement -> open .)
    NOT             reduce using rule 4 (statement -> open .)
    PLUS            reduce using rule 4 (statement -> open .)
    MINUS           reduce using rule 4 (statement -> open .)
    PLUS_PLUS       reduce using rule 4 (statement -> open .)
    MINUS_MINUS     reduce using rule 4 (statement -> open .)
    L_PAREN         reduce using rule 4 (statement -> open .)
    STRING          reduce using rule 4 (statement -> open .)
    MULTIPLY        reduce using rule 4 (statement -> open .)
    BIT_AND         reduce using rule 4 (statement -> open .)
    ID              reduce using rule 4 (statement -> open .)
    CHAR            reduce using rule 4 (statement -> open .)
    INT_NUM         reduce using rule 4 (statement -> open .)
    FLOAT_NUM       reduce using rule 4 (statement -> open .)
    $end            reduce using rule 4 (statement -> open .)
    R_FLOWBRACE     reduce using rule 4 (statement -> open .)


state 5

    (5) statement -> closed .

    IF              reduce using rule 5 (statement -> closed .)
    WHILE           reduce using rule 5 (statement -> closed .)
    FOR             reduce using rule 5 (statement -> closed .)
    SEMICOLON       reduce using rule 5 (statement -> closed .)
    RETURN          reduce using rule 5 (statement -> closed .)
    HASH            reduce using rule 5 (statement -> closed .)
    TYPE            reduce using rule 5 (statement -> closed .)
    L_FLOWBRACE     reduce using rule 5 (statement -> closed .)
    NOT             reduce using rule 5 (statement -> closed .)
    PLUS            reduce using rule 5 (statement -> closed .)
    MINUS           reduce using rule 5 (statement -> closed .)
    PLUS_PLUS       reduce using rule 5 (statement -> closed .)
    MINUS_MINUS     reduce using rule 5 (statement -> closed .)
    L_PAREN         reduce using rule 5 (statement -> closed .)
    STRING          reduce using rule 5 (statement -> closed .)
    MULTIPLY        reduce using rule 5 (statement -> closed .)
    BIT_AND         reduce using rule 5 (statement -> closed .)
    ID              reduce using rule 5 (statement -> closed .)
    CHAR            reduce using rule 5 (statement -> closed .)
    INT_NUM         reduce using rule 5 (statement -> closed .)
    FLOAT_NUM       reduce using rule 5 (statement -> closed .)
    $end            reduce using rule 5 (statement -> closed .)
    R_FLOWBRACE     reduce using rule 5 (statement -> closed .)


state 6

    (6) open -> IF . condition statement
    (7) open -> IF . condition closed ELSE open
    (13) closed -> IF . condition closed ELSE closed
    (16) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 52

    condition                      shift and go to state 51

state 7

    (8) open -> WHILE . condition open
    (14) closed -> WHILE . condition closed
    (16) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 52

    condition                      shift and go to state 53

state 8

    (9) open -> for . for_condition open
    (15) closed -> for . for_condition closed
    (17) for_condition -> . L_PAREN simple simple expr R_PAREN
    (18) for_condition -> . L_PAREN simple simple R_PAREN

    L_PAREN         shift and go to state 55

    for_condition                  shift and go to state 54

state 9

    (11) closed -> simple .

    IF              reduce using rule 11 (closed -> simple .)
    WHILE           reduce using rule 11 (closed -> simple .)
    FOR             reduce using rule 11 (closed -> simple .)
    SEMICOLON       reduce using rule 11 (closed -> simple .)
    RETURN          reduce using rule 11 (closed -> simple .)
    HASH            reduce using rule 11 (closed -> simple .)
    TYPE            reduce using rule 11 (closed -> simple .)
    L_FLOWBRACE     reduce using rule 11 (closed -> simple .)
    NOT             reduce using rule 11 (closed -> simple .)
    PLUS            reduce using rule 11 (closed -> simple .)
    MINUS           reduce using rule 11 (closed -> simple .)
    PLUS_PLUS       reduce using rule 11 (closed -> simple .)
    MINUS_MINUS     reduce using rule 11 (closed -> simple .)
    L_PAREN         reduce using rule 11 (closed -> simple .)
    STRING          reduce using rule 11 (closed -> simple .)
    MULTIPLY        reduce using rule 11 (closed -> simple .)
    BIT_AND         reduce using rule 11 (closed -> simple .)
    ID              reduce using rule 11 (closed -> simple .)
    CHAR            reduce using rule 11 (closed -> simple .)
    INT_NUM         reduce using rule 11 (closed -> simple .)
    FLOAT_NUM       reduce using rule 11 (closed -> simple .)
    $end            reduce using rule 11 (closed -> simple .)
    R_FLOWBRACE     reduce using rule 11 (closed -> simple .)
    ELSE            reduce using rule 11 (closed -> simple .)


state 10

    (12) closed -> block .

    IF              reduce using rule 12 (closed -> block .)
    WHILE           reduce using rule 12 (closed -> block .)
    FOR             reduce using rule 12 (closed -> block .)
    SEMICOLON       reduce using rule 12 (closed -> block .)
    RETURN          reduce using rule 12 (closed -> block .)
    HASH            reduce using rule 12 (closed -> block .)
    TYPE            reduce using rule 12 (closed -> block .)
    L_FLOWBRACE     reduce using rule 12 (closed -> block .)
    NOT             reduce using rule 12 (closed -> block .)
    PLUS            reduce using rule 12 (closed -> block .)
    MINUS           reduce using rule 12 (closed -> block .)
    PLUS_PLUS       reduce using rule 12 (closed -> block .)
    MINUS_MINUS     reduce using rule 12 (closed -> block .)
    L_PAREN         reduce using rule 12 (closed -> block .)
    STRING          reduce using rule 12 (closed -> block .)
    MULTIPLY        reduce using rule 12 (closed -> block .)
    BIT_AND         reduce using rule 12 (closed -> block .)
    ID              reduce using rule 12 (closed -> block .)
    CHAR            reduce using rule 12 (closed -> block .)
    INT_NUM         reduce using rule 12 (closed -> block .)
    FLOAT_NUM       reduce using rule 12 (closed -> block .)
    $end            reduce using rule 12 (closed -> block .)
    R_FLOWBRACE     reduce using rule 12 (closed -> block .)
    ELSE            reduce using rule 12 (closed -> block .)


state 11

    (10) for -> FOR .

    L_PAREN         reduce using rule 10 (for -> FOR .)


state 12

    (53) simple -> expr . SEMICOLON
    (91) expr -> expr . assignment exprOR
    (93) assignment -> . ASSIGN
    (94) assignment -> . PLUS_ASSIGN
    (95) assignment -> . MINUS_ASSIGN
    (96) assignment -> . MUL_ASSIGN
    (97) assignment -> . DIV_ASSIGN
    (98) assignment -> . AND_ASSIGN
    (99) assignment -> . OR_ASSIGN
    (100) assignment -> . XOR_ASSIGN
    (101) assignment -> . MOD_ASSIGN
    (102) assignment -> . L_SHIFT_ASSIGN
    (103) assignment -> . R_SHIFT_ASSIGN

    SEMICOLON       shift and go to state 56
    ASSIGN          shift and go to state 58
    PLUS_ASSIGN     shift and go to state 59
    MINUS_ASSIGN    shift and go to state 60
    MUL_ASSIGN      shift and go to state 61
    DIV_ASSIGN      shift and go to state 62
    AND_ASSIGN      shift and go to state 63
    OR_ASSIGN       shift and go to state 64
    XOR_ASSIGN      shift and go to state 65
    MOD_ASSIGN      shift and go to state 66
    L_SHIFT_ASSIGN  shift and go to state 67
    R_SHIFT_ASSIGN  shift and go to state 68

    assignment                     shift and go to state 57

state 13

    (56) simple -> SEMICOLON .
